--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
                     <h2 class="section-heading">Who are we?</h2>
                     <hr class="light">
                     <p class="text-faded">We are a group of engineers, liberal arts, and business students on campus dedicated to connecting our fellow classmates. By students, for students.</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
                 </div>
             </div>
         </div>
@@ -132,7 +131,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Made with Love</h3>
-                        <p class="text-muted">By students, for student!</p>
+                        <p class="text-muted">By students, for students!</p>
                     </div>
                 </div>
             </div>
